2005-03-24  Eric Christopher  <echristo@redhat.com>

	* elfxx-mips.c: Revert previous patch.

2005-03-24  Nick Clifton  <nickc@redhat.com>

	* targets.c (_bfd_target_vector): Only include the
	bfd_elf32_ia64_hpux_big_vec vector when building a 64-bit BFD with
	all targets enabled.

2005-03-24  James E Wilson  <wilson@specifixinc.com>

	* Makefile.am (BFD32_BACKENDS): Delete elf32-ia64.lo.
	(BFD64_BACKENDS): Add elf32-ia64.lo.
	* Makefile.in: Regenerate.

2005-03-23  Eric Christopher  <echristo@redhat.com>

	* elfxx-mips.c (MIPS_ELF_READONLY_SECTION): New.
	(mips_elf_calculate_relocation): Use. Define DF_TEXTREL
	after emitting relocation.
	(_bfd_mips_elf_adjust_dynamic_symbol): Ditto.
	(_bfd_mips_elf_check_relocs): Remove code to set DF_TEXTREL
	and readonly_reloc.

2005-03-23  Mike Frysinger  <vapier@gentoo.org>
	    Nick Clifton  <nickc@redhat.com>

	* config.bfd: Accept any C library to accompany a GNU Linux
	implementation, not just the GNU C library.
	* configure.in: Likewise.
	* configure: Regenerate.

2005-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	* bfd-in.h (_bfd_elf_provide_symbol): New.
	* bfd-in2.h: Regenerated.

	* elf32-ppc.c (set_linker_sym): Moved to elflink.c.
	(ppc_elf_set_sdata_syms): Call _bfd_elf_provide_symbol instead
	of set_linker_sym.

	* elflink.c (_bfd_elf_provide_symbol): New. Moved and renamed
	from elf32-ppc.c.

2005-03-22  Hans-Peter Nilsson  <hp@axis.com>

	* hash.c (strtab_hash_newfunc): Fix typo in allocated size.

2005-03-22  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-isa.c (xtensa_opcode_lookup, xtensa_state_lookup,
	xtensa_sysreg_lookup_name, xtensa_interface_lookup,
	xtensa_funcUnit_lookup): Skip bsearch call if count is zero.
	(xtensa_opcode_decode): Rearrange code.

2005-03-22  Nick Clifton  <nickc@redhat.com>

	* binary.c: Convert to ISO C90 formatting.
	* coff-arm.c: Convert to ISO C90 formatting.
	* coffgen.c: Convert to ISO C90 formatting.
	* elf32-gen.c: Convert to ISO C90 formatting.