@@ -1,3 +1,7 @@
+2005-03-28  Mark Kettenis  <kettenis@gnu.org>
+
+	* netbsd-core.c: Convert to ISO C.  Fix formatting.
+
 2005-03-24  Eric Christopher  <echristo@redhat.com>
 
 	* elfxx-mips.c: Revert previous patch.
